--- a/KosmoForumClient/Views/Category/Index.cshtml
+++ b/KosmoForumClient/Views/Category/Index.cshtml
@@ -9,18 +9,18 @@
     </div>
     <br />
     <br />
-    <div style="background-color:#cde8e2" class="p-3 rounded">
-        <table id="tblData" class="table table-striped table-bordered" style="width:100%">
+    @*<div style="background-color:#cde8e2" class="p-3 rounded">*@
+        <table id="tblData" class="table table-primary" style="width: 100%; text-align: center;">
             <thead>
             <tr class="table-danger">
-                <th>Image</th>
-                <th>Title</th>
-                <th>Description</th>
+                <th style="text-align: center;">Zdjęcie</th>
+                <th style="text-align: center;">Tytuł</th>
+                <th style="text-align: center">Opis</th>
                 <th></th>
             </tr>
             </thead>
         </table>
-    </div>
+    @*</div>*@
 </div>
 
 @section Scripts
