Add image controller and use it during deleting images in specific post

--- a/KosmoForumClient/Views/Category/Index.cshtml
+++ b/KosmoForumClient/Views/Category/Index.cshtml
@@ -5,7 +5,8 @@
         </div>
         <div class="col-6 text-right">
             <a asp-action="Upsert" class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Stwórz nową kategorie</a>
-            
+            <a onclick=""></a>
+
         </div>
     </div>
     <br />
