--- a/KosmoForumClient/Views/ForumPost/Upsert.cshtml
+++ b/KosmoForumClient/Views/ForumPost/Upsert.cshtml
@@ -4,6 +4,52 @@
     var title = "Stwórz posta";
 }
 
+<style>
+    .container2 {
+        position: relative;
+        width: 100%;
+        max-width: 400px;
+    }
+
+    .container2 img {
+        width: 100%;
+        height: auto;
+    }
+
+    .container2 .btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: red;
+        font-size: 16px;
+        padding: 16px 30px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        text-align: center;
+        display: none;
+    }
+
+    .container2:hover img
+    {
+        opacity: 0.3;
+    }
+
+    .container2:hover .btn
+    {
+        background-color: black;
+        color: white;
+        display: block;
+    }
+
+    .container2 .btn:hover {
+        background-color: red;
+        color: white;
+    }
+</style>
+
 
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
 
@@ -72,13 +118,36 @@
             {
                 foreach (var item in Model.forumPost.Images)
                 {
+
                     var base64 = Convert.ToBase64String(item.Picture);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                    <img src="@imgSrc" width="100%" />
+                    <div class="container2">
+                        <img src="@imgSrc" style="width: 100%" />
+                        <a onclick="DeleteImage(@item.Id)" class='btn btn-danger text-white' style = 'cursor:pointer;'> <i class = 'far fa-trash-alt'></i></a>
+                    </div>
+
                 }
             }
-
         </div>
     </div>
 
 </form>
+
+<script>
+    function DeleteImage(data) {
+        $.ajax({
+            url: "/image/DeleteImage/" + data,
+            type: 'DELETE',
+            success: function(data) {
+                if (data.success) {
+                    //toastr.success(data.message);
+                    location.reload();
+                    
+                } 
+            //else {
+                //    toastr.error(data.message);
+                //}
+            }
+    })
+    }
+</script>
