Add limit of file during creating and updating forumpost and starting designing home page

--- a/KosmoForumClient/Views/Category/Upsert.cshtml
+++ b/KosmoForumClient/Views/Category/Upsert.cshtml
@@ -41,7 +41,7 @@
                     <label asp-for="Image"></label>
                 </div>
                 <div class="col-8">
-                    <input type="file" asp-for="Image" id="projectImage" name="files" multiple class="form-control" />
+                    <input type="file" asp-for="Image" id="projectImage" name="files"class="form-control" />
                 </div>
             </div>
             <div class="form-group row">
@@ -67,3 +67,4 @@
     </div>
 
 </form>
+
