--- a/KosmoForumClient/Views/ForumPost/Upsert.cshtml
+++ b/KosmoForumClient/Views/ForumPost/Upsert.cshtml
@@ -57,7 +57,8 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.forumPost.Id != 0)
         {
-            <input type="hidden" asp-for="forumPost.Id" />
+            <input type="hidden" id="forumPostId" asp-for="forumPost.Id" />
+            <input type="hidden" id="imagesCount"  asp-for="forumPost.Images.Count"/>
             title = "Edycja posta";
         }
 
@@ -99,7 +100,7 @@
                     <label asp-for="forumPost.Images"></label>
                 </div>
                 <div class="col-8">
-                    <input type="file" asp-for="forumPost.Images" id="projectImage" name="files" multiple class="form-control"/>
+                    <input type="file" asp-for="forumPost.Images" id="projectImage" name="files" multiple class="form-control" onchange="checkFilesCount(this)"/>
                 </div>
             </div>
             <div class="form-group row">
@@ -142,12 +143,37 @@
                 if (data.success) {
                     //toastr.success(data.message);
                     location.reload();
-                    
-                } 
-            //else {
+
+                }
+                //else {
                 //    toastr.error(data.message);
                 //}
             }
-    })
+        });
+    }
+
+
+    //$(function() {
+    //    $("button[type='submit']").click(function() {
+    //        var $fileUpload = $("input[type='file']");
+    //        if (parseInt($fileUpload.get(0).files.length) > 3) {
+    //            alert("Możesz dodać maksymalnie 3 pliki")
+    //        }
+    //    });
+    //});
+
+    function checkFilesCount(id) {
+        if (document.getElementById("imagesCount").value != "0") {
+            var value = parseInt(document.getElementById("imagesCount").value);
+            if (id.files.length + value > 3) {
+                toastr.error("Załadowałeś za dużo plików, maksymalnie 3");
+                document.getElementById("projectImage").value = "";
+            }
+        } else {
+            if (id.files.length > 3) {
+            toastr.error("Załadowałeś za dużo plików, maksymalnie 3");
+            document.getElementById("projectImage").value = "";
+            }
+        }
     }
 </script>
