--- a/KosmoForumClient/Views/Home/Index.cshtml
+++ b/KosmoForumClient/Views/Home/Index.cshtml
@@ -1,8 +1,30 @@
-﻿@{
+﻿@model KosmoForumClient.Models.View.CategoryVM;
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center container p-5">
+    <table class="table table-bordered table-hover">
+        <thead class="bg-primary">
+        <tr>
+            <th scope="col" style="width: 10%"></th>
+            <th scope="col">Kategoria</th>
+            <th scope="col">Opis</th>
+        </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.CategoriesList)
+            {
+                <tr>
+                    <th scope="row"><img src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
+                                         style='width: 50px; height: 50px;'/></th>
+                    <td><a href="forumpost/ForumPostInCategory?title=@item.Title">@item.Title</a></td>
+                    <td>@item.Description</td>
+                </tr>
+
+            }
+        </tbody>
+    </table>
 </div>
+
