--- a/KosmoForumClient/Views/Home/Register.cshtml
+++ b/KosmoForumClient/Views/Home/Register.cshtml
@@ -1,53 +1,72 @@
 ﻿@model KosmoForumClient.Models.User
 
+<div class="container p-5" align="center">
 
-<form method="post" asp-action="Register" enctype="multipart/form-data">
+    <form method="post" asp-action="Register" enctype="multipart/form-data">
 
-    <div class="row px-2 mx-2 backgroundWhite border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="shadow-lg justify-content-center p-3 w-auto" align="center">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="col-12 p-3">
-            <h2 class="text-primary">Rejestracja</h2>
+            <div class="col-12 p-3">
+                <h2 class="text-primary">Rejestracja</h2>
+            </div>
+            <div class="col-8">
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Username"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Username" class="form-control" type="text" placeholder="Login..." />
+                        <span asp-validation-for="Username" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Password"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Password" class="form-control" type="text" placeholder="Hasło..." />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Email"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Email" class="form-control" type="text" placeholder="Email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Avatar"></label>
+                    </div>
+                    <div class="col-8 custom-file">
+                        <input type="file" asp-for="Avatar" id="projectImage" onchange="checkAmountOfFile(this)" name="files"
+                               class="form-control custom-file-input" />
+                        <label class="custom-file-label text-left" for="projectImage" id="projectImageLabel">Wybierz Plik</label>
+                    </div>
+                </div>
+                <button type="submit" value="Submit" class="btn btn-primary btn-block rounded-pill">Zarejestruj</button>
+            </div>
         </div>
-        <div class="col-8">
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Username"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Username" class="form-control" type="text" placeholder="Login..." />
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Password"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Password" class="form-control" type="text" placeholder="Hasło..." />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Email"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Email" class="form-control" type="text" placeholder="Email" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-            </div>
+    </form>
 
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Avatar"></label>
-                </div>
-                <div class="col-8">
-                    <input type="file" asp-for="Avatar" id="projectImage" name="files" multiple class="form-control" />
-                </div>
-            </div>
-            <button type="submit" value="Submit" class="btn btn-primary form-control">Zarejestruj</button>
-        </div>
-    </div>
-</form>
+</div>
 
+<script>
+    function checkAmountOfFile(id) {
+        if (id.files.length > 1) {
+            toastr.error("Maksymalnie 1 avatar");
+            document.getElementById("projectImage").value = "";
+        }
+        changeLabel(id);
+    }
+
+    function changeLabel(id) {
+        document.getElementById("projectImageLabel").textContent = id.files[0].name;
+    }
+
+</script>
