--- a/KosmoForumClient/Views/ForumPost/Index.cshtml
+++ b/KosmoForumClient/Views/ForumPost/Index.cshtml
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-6">
             <h2 class="text-primary">Lista postów</h2>
+            <input type="hidden" value="index" id="OptionOfData"/>
         </div>
         <div class="col-6 text-right">
             <a asp-action="Upsert" class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Stwórz nowy post</a>
