--- a/KosmoForumClient/Views/Shared/_Layout.cshtml
+++ b/KosmoForumClient/Views/Shared/_Layout.cshtml
@@ -39,12 +39,25 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ForumPost" asp-action="Index">Posty</a>
                         </li>
 
+
                         @if (httpAccessor.HttpContext.Session.GetString("JWToken") != null &&
                          httpAccessor.HttpContext.Session.GetString("JWToken").ToString().Length > 0)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-controller="Home" asp-action="Logout">Wyloguj</a>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropDown"
+                                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Moje konto
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropDown">
+                                    <a class="dropdown-item" asp-controller="User" asp-action="MyForumPosts">Moje posty</a>
+                                    <a class="dropdown-item" asp-controller="User" asp-action="ChangeAvatar">Zmień avatar</a>
+                                    <a class="dropdown-item" asp-controller="User" asp-action='ChangePassword' >Zmień hasło</a>
+                                </div>
+                            </li>
+
                         }
                         else
                         {
