--- a/KosmoForumClient/Views/Opinions/Upsert.cshtml
+++ b/KosmoForumClient/Views/Opinions/Upsert.cshtml
@@ -11,7 +11,7 @@
         @if (Model.Id != 0)
         {
             <input type="hidden" asp-for="Id" />
-            title = "Edycja kategorii";
+            title = "Edycja opinii";
         }
         <input type="hidden" asp-for="ForumPostId" />
 
@@ -34,6 +34,8 @@
                 </div>
                 <div class="col-8">
                     <select asp-for="Marks" asp-items="Html.GetEnumSelectList<Opinion.MarksType>()" class="form-control"></select>
+                    
+                   
                 </div>
             </div>
             <div class="form-group row">
@@ -50,5 +52,11 @@
     </div>
 
 </form>
+
+@section Scripts
+{
+    <script type="text/javascript">
+    </script>
+}
 
 
