--- a/KosmoForumClient/Views/Home/Login.cshtml
+++ b/KosmoForumClient/Views/Home/Login.cshtml
@@ -5,33 +5,40 @@
 
 <div class="container p-5 w-auto" align="center">
     <div class="col-xs-1 bg-white shadow-lg rounded justify-content-center p-3 w-100" align="center" >
-    <h1 class="p-5 text-primary">Logowanie</h1>
+        <h1 class="p-5 text-primary">Logowanie</h1>
+        
+        <input type="hidden" value="@TempData["error"]" id="tempDataError" />
 
-    <form method="post">
-        <div class="col-md-4 mb-2 mr-sm-2 input-group">
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M10 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                    </svg>
+        <form method="post">
+            <div class="col-md-4 mb-2 mr-sm-2 input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M10 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                        </svg>
+                    </div>
                 </div>
+                <input asp-for="Username" type="text" placeholder="Username..." class="form-control"/>
             </div>
-            <input asp-for="Username" type="text" placeholder="Username..." class="form-control"/>
-        </div>
-        <div class="col-md-4 mb-2 mr-sm-2 input-group">
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-key" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z"/>
-                        <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
+            <div class="col-md-4 mb-2 mr-sm-2 input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-key" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z"/>
+                            <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                        </svg>
+                    </div>
                 </div>
+                <input asp-for="Password" type="password" placeholder="Password..." class="form-control"/>
             </div>
-            <input asp-for="Password" type="password" placeholder="Password..." class="form-control"/>
-        </div>
-        <div class="col-md-4 mb-2 mr-sm-2 input-group pb-5">
-            <button type="submit" value="Submit" class="btn btn-primary btn-lg btn-block rounded-pill">Zaloguj</button>
-        </div>
-    </form>
+            <div class="col-md-4 mb-2 mr-sm-2 input-group pb-5">
+                <button type="submit" value="Submit" class="btn btn-primary btn-lg btn-block rounded-pill">Zaloguj</button>
+            </div>
+        </form>
     </div>
 </div>
+
+@section Scripts
+{
+    <script src="~/js/showErrorsFromApi.js" ></script>
+}
