--- a/KosmoForumClient/Views/User/ChangePassword.cshtml
+++ b/KosmoForumClient/Views/User/ChangePassword.cshtml
@@ -1,6 +1,8 @@
 ﻿@model KosmoForumClient.Models.View.ChangePasswordVM
 
 <div class="container p-5" align="center">
+    
+    <input type="hidden" value="@TempData["error"]" id="tempDataError"/>
 
     <form method="post" asp-action="ChangePassword" enctype="multipart/form-data" onsubmit="return checkPassword()">
 
@@ -16,7 +18,7 @@
                         <label asp-for="OldPassword"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="OldPassword" class="form-control" type="password" placeholder="Stare hasło.." />
+                        <input asp-for="OldPassword" class="form-control" type="password" placeholder="Stare hasło.."/>
                         <span asp-validation-for="OldPassword" class="text-danger"></span>
                     </div>
                 </div>
@@ -25,7 +27,7 @@
                         <label asp-for="NewPassword"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="NewPassword" class="form-control" type="password" id="newPassword" placeholder="Nowe Hasło..." />
+                        <input asp-for="NewPassword" class="form-control" type="password" id="newPassword" placeholder="Nowe Hasło..."/>
                         <span asp-validation-for="NewPassword" class="text-danger"></span>
                     </div>
                 </div>
@@ -34,7 +36,7 @@
                         <label asp-for="NewPassword"></label>
                     </div>
                     <div class="col-8">
-                        <input class="form-control" type="password" id="retypePassword" onchange="CheckPasswords(this)" placeholder="Powtórz hasło..." />
+                        <input class="form-control" type="password" id="retypePassword" onchange="CheckPasswords(this)" placeholder="Powtórz hasło..."/>
                         <label id="warningMessage" class="text-danger">Hasła różnią się od siebie, popraw to !</label>
                     </div>
 
@@ -48,6 +50,8 @@
 
 @section Scripts
 {
+    <script src="~/js/showErrorsFromApi.js"></script>
+
     <script type="text/javascript">
         $(document).ready(function() {
             $("#warningMessage").hide();
