--- a/KosmoForumClient/Views/User/ChangeAvatar.cshtml
+++ b/KosmoForumClient/Views/User/ChangeAvatar.cshtml
@@ -1,6 +1,8 @@
 ﻿@model KosmoForumClient.Models.User
 
 <div class="container p-5" align="center">
+    
+    <input type="hidden" value="@TempData["error"]" id="tempDataError"/>
 
     <form method="post" asp-action="ChangeAvatar" enctype="multipart/form-data" onsubmit="return checkValueOfFile()">
 
@@ -16,11 +18,14 @@
                     <h4>Aktualny avatar:</h4>
                 </div>
                 @{
+
                     var base64 = Convert.ToBase64String(Model.Avatar);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
                     <div class="rounded mx-auto d-block p-5">
                         <img src="@imgSrc" style="width: 100%; height: 200px; width: 200px;"/>
                     </div>
+
+
                 }
             </div>
             <div class="col-8">
@@ -30,7 +35,7 @@
                     </div>
                     <div class="col-8 custom-file">
                         <input type="file" asp-for="Avatar" id="projectImage" onchange="checkAmountOfFile(this)" name="files"
-                               class="form-control custom-file-input" />
+                               class="form-control custom-file-input"/>
                         <label class="custom-file-label text-left" for="projectImage" id="projectImageLabel">Wybierz Plik</label>
                     </div>
                 </div>
@@ -44,6 +49,8 @@
 
 @section Scripts
 {
+    <script src="~/js/showErrorsFromApi.js"></script>
+
     <script>
         function checkAmountOfFile(id) {
             if (id.files.length > 1) {
