--- a/KosmoForumClient/Views/ForumPost/Upsert.cshtml
+++ b/KosmoForumClient/Views/ForumPost/Upsert.cshtml
@@ -56,12 +56,12 @@
 
     <div class="row px-2 mx-2 backgroundWhite border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.forumPost.Id != 0)
+        @if (Model.ForumPostModel.Id != 0)
         {
-            <input type="hidden" id="forumPostId" asp-for="forumPost.Id" />
+            <input type="hidden" id="forumPostId" asp-for="ForumPostModel.Id" />
             title = "Edycja posta";
         }
-        <input type="hidden" id="imagesCount" asp-for="forumPost.Images.Count" />
+        <input type="hidden" id="imagesCount" asp-for="ForumPostModel.Images.Count" />
 
         <div class="col-12 p-3">
             <h2 class="text-primary">@title</h2>
@@ -72,42 +72,42 @@
                     Kategoria
                 </div>
                 <div class="col-8">
-                    @Html.DropDownListFor(m => m.forumPost.CategoryId, Model.CategoryList, "-Wybierz kategorie",
+                    @Html.DropDownListFor(m => m.ForumPostModel.CategoryId, Model.CategoryList, "-Wybierz kategorie",
                         new { @class = "form-control" })
-                    <span asp-validation-for="forumPost.CategoryId" class="text-danger"></span>
+                    <span asp-validation-for="ForumPostModel.CategoryId" class="text-danger"></span>
                 </div>
             </div>
 
             <div class="form-group row">
                 <div class="col-4">
-                    <label asp-for="forumPost.Title"></label>
+                    <label asp-for="ForumPostModel.Title"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="forumPost.Title" class="form-control" />
-                    <span asp-validation-for="forumPost.Title" class="text-danger"></span>
+                    <input asp-for="ForumPostModel.Title" class="form-control" />
+                    <span asp-validation-for="ForumPostModel.Title" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-4">
-                    <label asp-for="forumPost.Content"></label>
+                    <label asp-for="ForumPostModel.Content"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="forumPost.Content" class="form-control" />
-                    <span asp-validation-for="forumPost.Content" class="text-danger"></span>
+                    <input asp-for="ForumPostModel.Content" class="form-control" />
+                    <span asp-validation-for="ForumPostModel.Content" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-4">
-                    <label asp-for="forumPost.Images"></label>
+                    <label asp-for="ForumPostModel.Images"></label>
                 </div>
                 <div class="col-8">
-                    <input type="file" asp-for="forumPost.Images" id="projectImage" name="files" multiple class="form-control" onchange="checkFilesCount(this)" />
+                    <input type="file" asp-for="ForumPostModel.Images" id="projectImage" name="files" multiple class="form-control" onchange="checkFilesCount(this)" />
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-4 offset-4">
                     <button type="submit" class="btn btn-primary form-control">
-                        @(Model.forumPost.Id != 0 ? "Uaktualnij" : "Stwórz")
+                        @(Model.ForumPostModel.Id != 0 ? "Uaktualnij" : "Stwórz")
                     </button>
                 </div>
                 <div class="col-4">
@@ -116,9 +116,9 @@
             </div>
         </div>
         <div class="col-4 text-right" style="width: 250px;">
-            @if (Model.forumPost.Images != null)
+            @if (Model.ForumPostModel.Images != null)
             {
-                foreach (var item in Model.forumPost.Images)
+                foreach (var item in Model.ForumPostModel.Images)
                 {
 
                     var base64 = Convert.ToBase64String(item.Picture);
