--- a/KosmoForumClient/Views/Home/Index.cshtml
+++ b/KosmoForumClient/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Home Page";
 }
 
+<input type="hidden" value="@TempData["error"]" id="tempDataError" />
 <div class="text-center container p-5">
     <table class="table table-bordered table-hover">
         <thead class="bg-primary">
@@ -14,17 +15,21 @@
         </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.CategoriesList)
-            {
-                <tr>
-                    <th scope="row"><img src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
-                                         style='width: 50px; height: 50px;'/></th>
-                    <td><a href="forumpost/ForumPostInCategory?title=@item.Title">@item.Title</a></td>
-                    <td>@item.Description</td>
-                </tr>
+        @foreach (var item in Model.CategoriesList)
+        {
+            <tr>
+                <th scope="row"><img src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
+                                     style='width: 50px; height: 50px;'/></th>
+                <td><a href="forumpost/ForumPostInCategory?title=@item.Title">@item.Title</a></td>
+                <td>@item.Description</td>
+            </tr>
 
-            }
+        }
         </tbody>
     </table>
 </div>
+
+@section Scripts{ 
+<script src="~/js/showErrorsFromApi.js"></script>
+}
 
