--- a/KosmoForumClient/Views/Home/Register.cshtml
+++ b/KosmoForumClient/Views/Home/Register.cshtml
@@ -26,7 +26,7 @@
                         <label asp-for="Password"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Password" class="form-control" type="text" placeholder="Hasło..." />
+                        <input asp-for="Password" class="form-control" type="password" placeholder="Hasło..." />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
