--- a/KosmoForumClient/Views/Opinions/Upsert.cshtml
+++ b/KosmoForumClient/Views/Opinions/Upsert.cshtml
@@ -42,7 +42,7 @@
                     <i class="fa fa-star-o fa-2x" id="star2" style="color: pink" aria-hidden="true" onclick="changeStars(2)" onmouseover="focusStars(2)" onmouseout="focusOutStars(2)"></i>
                     <i class="fa fa-star-o fa-2x" id="star3" style="color: pink" aria-hidden="true" onclick="changeStars(3)" onmouseover="focusStars(3)" onmouseout="focusOutStars(3)"></i>
                     <i class="fa fa-star-o fa-2x" id="star4" style="color: pink" aria-hidden="true" onclick="changeStars(4)" onmouseover="focusStars(4)" onmouseout="focusOutStars(4)"></i>
-                    <input type="hidden" asp-for="Marks" id="markInput" />
+                    <input type="hidden" asp-for="Marks" id="markInput" value="-1" />
 
 
 
@@ -81,27 +81,46 @@
         }
 
 
-        //function focusStars(counter) {
-        //    for (i = 0; i <= counter; i++) {
-        //        $("#star" + i).attr('class', 'fa fa-star fa-2x');
-        //    }
-        //}
+        function focusStars(counter) {
+            for (i = 0; i <= counter; i++) {
+                $("#star" + i).attr('class', 'fa fa-star fa-2x');
+            }
+        }
 
-        //function focusOutStars() {
+        function focusOutStars() {
+            var value = $("#markInput").val();
+            var counter = 0;
+
+            if (value == 'Bad') {
+                counter = 0;
+            } else if (value == 'Unsatisfactory') {
+                counter = 1;
+            } else if (value == 'Sufficient') {
+                counter = 2;
+            } else if (value == 'Good') {
+                counter = 3;
+            } else if (value == 'VeryGood') {
+                counter = 4;
+            } else {
+                counter = parseInt(value);
+            }
 
 
+            for (i = counter; i < 5; i++) {
+                $("#star" + i).attr('class', 'fa fa-star-o fa-2x');
+            }
 
-        //    for (i = value; i < 5; i++) {
-        //        $("#star" + i).attr('class', 'fa fa-star-o fa-2x');
-        //    }
+            if (counter != '-1') {
+
+                for (i = 0; i <= counter; i++)
+                {
+                    $("#star" + i).attr('class', 'fa fa-star fa-2x');
+                }
+            }
 
 
-        //    for (i = 0; i < value; i++) {
-        //        $("#star" + i).attr('class', 'fa fa-star fa-2x');
-        //    }
-         
-        //}
-    
+        }
+
     </script>
 }
 
