--- a/KosmoForumClient/Views/Home/Register.cshtml
+++ b/KosmoForumClient/Views/Home/Register.cshtml
@@ -11,7 +11,7 @@
             <div class="col-12 p-3">
                 <h2 class="text-primary">Rejestracja</h2>
             </div>
-            <div class="col-8">
+            <div class="col-8" >
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Username"></label>
@@ -44,14 +44,26 @@
                     <div class="col-4">
                         <label asp-for="Avatar"></label>
                     </div>
-                    <div class="col-8 custom-file">
-                        <input type="file" asp-for="Avatar" id="projectImage" onchange="checkAmountOfFile(this)" name="files"
-                               class="form-control custom-file-input" />
-                        <label class="custom-file-label text-left" for="projectImage" id="projectImageLabel">Wybierz Plik</label>
+                    <div class="col-8">
+                        <div class="custom-file">
+                            <input type="file" asp-for="Avatar" id="projectImage" onchange="checkAmountOfFile(this)" name="files"
+                                   class="form-control custom-file-input" />
+                            <label class="custom-file-label text-left" for="projectImage" id="projectImageLabel">Wybierz Plik</label>
+                        </div>
                     </div>
                 </div>
-                <button type="submit" value="Submit" class="btn btn-primary btn-block rounded-pill">Zarejestruj</button>
+                <div class="form-group row">
+                    <div class="col-4">
+
+                    </div>
+                    <div class="col-8">
+                        <button type="submit" value="Submit" class="btn btn-primary btn-block btn-lg rounded-pill">Zarejestruj</button>
+                    </div>
+                </div> 
+
             </div>
+            
+           
         </div>
     </form>
 
